# noisferatu-mac

./: .gitignore  dsp_core.py  engine.py  main.py  requirements.txt  tomorrow.md  vinyl_crackle.npy
algorithms/: __init__.py  bank1_wavetables.py  bank2_noisy.py  bank3_bitbend.py  bank4_blips.py  bank5_logic.py  wavegen.py
plugin/: CMakeLists.txt  README.md
plugin/Source/: Bank1.h  Bank2.h  Bank3.h  Bank4.h  Bank5.h  DspCore.h  Engine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VinylCrackleData.h  Wavegen.h
plugin/tools/: gen_crackle_header.py  golden_test.cpp  golden_test.py
ui/: __init__.py  hardware_panel.py  main_window.py  waveform.py
